<?xml version="1.0"?>
<package format="3">
  <name>amr_keyboard_control</name>
  <version>0.0.1</version>
  <description>Keyboard control node for AMR via Arduino</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- THIS PART WAS MISSING -->
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
