<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_nav2</name>
  <version>0.0.0</version>
  <description>Nav2 bringup package</description>

  <maintainer email="tony@todo.todo">tony</maintainer>
  <license>Apache-2.0</license>

  <!-- Python and ROS2 dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_export_depend>rclpy</build_export_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Nav2 + common message types -->
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
